# rgbd-align

./: .gitignore  CMakeLists.txt  package.xml
cmake/: dbow.cmake
include/: Align.h  BagWords.h  Converter.h  ImageSave.h  KeyFrame.h  KeyFrameDatabase.h  LoopDetector.h  ORBVocabulary.h  ORBextractor.h  utility.h
launch/: align.launch  default.rviz  loop_detect.launch
node/: rgbd.cpp  rgbd_save.cpp
src/: Align.cpp  BagWords.cpp  Converter.cc  ImageSave.cpp  KeyFrame.cc  KeyFrameDatabase.cc  LoopDetector.cpp
